@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../libs/include/gc/gc.lib"
+				AdditionalDependencies="../libs/include/gc/gcstat.lib"
 				OutputFile="../bin/neko.dll"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -81,7 +81,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../libs/include/gc/gc.lib msvcrt60.lib"
+				AdditionalDependencies="../libs/include/gc/gcstat.lib msvcrt60.lib"
 				OutputFile="../bin/neko.dll"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="MSVCRT"
